--- a/tutorials/manifold.ipynb
+++ b/tutorials/manifold.ipynb
@@ -43,10 +43,10 @@
     "from datasets import Dataset, load_dataset\n",
     "from einops import einsum\n",
     "\n",
-    "from utils.vis import Vis\n",
+    "from utils.feature import Feature\n",
     "from utils.manifold import Manifold\n",
     "from utils.functions import *\n",
-    "from coders.asparse import Autoencoder\n",
+    "from autoencoder import Autoencoder\n",
     "\n",
     "import plotly.express as px\n",
     "import torch"
@@ -81,10 +81,10 @@
    "outputs": [],
    "source": [
     "# Load in the autoencoder\n",
-    "coder = Autoencoder.load(model, layer=18, expansion=16, root='weights/sweep', tags=['2']).half()\n",
+    "coder = Autoencoder.load(model, layer=18, expansion=16, alpha=0.2).half()\n",
     "\n",
     "# Load in the feature max-activation visualizer, this can take a while (reduce batch size if needed)\n",
-    "vis = Vis(coder, tokenizer, dataset, max_steps=2**4, batch_size=2**5)"
+    "vis = Feature(coder, tokenizer, dataset, max_steps=2**4, batch_size=2**5)"
    ]
   },
   {
