--- a/tutorials/manifold.ipynb
+++ b/tutorials/manifold.ipynb
@@ -211,7 +211,7 @@
    "id": "eba7fb8d",
    "metadata": {},
    "source": [
-    "Given these features, we can construct a metric tensor (also known as a density matrix) that describes the manifold.\n",
+    "Given these features, we can construct a quadratic form that describes the manifold.\n",
     "We can then decompose this matrix using an eigendecomposition to show how many dimensional the manifold actually is.\n",
     "\n",
     "You'll see that sometimes, even when using many different features, the manifold will be roughly one dimensional.\n",
@@ -250,7 +250,7 @@
     "\n",
     "Our approach simply uses the autoencoder to find a linear projection which likely contains a manifold, then we just project the inputs into it.\n",
     "\n",
-    "Finally, color correspond to the activation of the metric tensor $xMx$. \n",
+    "Finally, color correspond to the activation of the quadratic form $xMx$. \n",
     "Hovering over a sample shows the current token and the top model prediction."
    ]
   },
